@@ -800,8 +800,6 @@
 		</plugins>
 	</reporting>
 	<properties>
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
 		<gsec.version>0.0.21</gsec.version>
 		<spring.version>3.2.18.RELEASE</spring.version>
 		<spring.security.version>3.2.10.RELEASE</spring.security.version>
@@ -837,7 +835,6 @@
 			<!-- FIXME: remove this once we've migrated to Spring 5 -->
 			<!-- this flag is ignored starting Java 17 -->
 			--add-opens=java.base/java.lang=ALL-UNNAMED
-			--add-opens=java.desktop/com.sun.imageio.plugins.png=ALL-UNNAMED
 		</jvmOptions>
 		<!-- JVM options used in tests -->
 		<testJvmOptions>
